Revert "add rest template"
This reverts commit f891b0069841b164c6e5bf4b494218055290f626.